# euclid

./: .gitignore  ChangeLog.md  README.md  derivatives.cabal  package.yaml
app/: Algorithms.hs  Describe.hs  Evaluate.hs  Geometry.hs  GeometryUtil.hs  Main.hs
src/: Algorithms.hs  Describe.hs  Evaluate.hs  Functions.hs  GeomMain.hs  Geometry.hs  Geometry2.hs  GeometryUtil.hs  GeometryUtil2.hs  Main.hs
test/: DummySpec.hs
