-- documentation, see http://haskell.org/cabal/users-guide/

name:                euclid
version:             0.1.0.0
synopsis:            Rule-compass geometry expressions (Trying Haskell)
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              evgenii
maintainer:          xxx@xxx.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:  Describe, Evaluate, Geometry, GeometryUtil, Algorithms, Main
  -- other-modules:
  -- other-extensions:
  ghc-options: -Wall
  build-depends:       base >=4.9, split
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.9
    , euclid
    , hspec == 2.*
  other-modules:
  default-language: Haskell2010
